objects/AccountPlan__c.object
<CustomObject>
    <fields>
        <fullName>AccountPlanType__c</fullName>
        <label>Account Plan Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Semester</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AchievedAmount__c</fullName>
        <label>Achieved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PlanNotReachedReasons__c</fullName>
        <description>If you actuals are below the plan value, please state the reasons here</description>
        <inlineHelpText>If you actuals are below the plan value, please state the reasons here</inlineHelpText>
        <label>Plan Not Reached Reasons</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PlannedAmount__c</fullName>
        <label>Planned Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Time Period</label>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Account Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Provide_Plan_Not_Reached_Reason</fullName>
        <active>true</active>
        <description>Provide a reason why actuals are lower than planned values</description>
        <errorConditionFormula>AND(
  AchievedAmount__c &lt;  PlannedAmount__c ,
   ISBLANK( PlanNotReachedReasons__c ) = TRUE
)</errorConditionFormula>
        <errorMessage>Please provide a reason, why plan has not been reached.</errorMessage>
    </validationRules>
</CustomObject>